Bug 482267 - Startup slow with Picture of the day (bing)
Summary: Startup slow with Picture of the day (bing)
Status: RESOLVED FIXED
Alias: None
Product: kdeplasma-addons
Classification: Unmaintained
Component: Picture of the Day (other bugs)
Version First Reported In: 6.0.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: qt6
: 482082 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-03-03 03:17 UTC by Txutxifel
Modified: 2024-10-17 00:20 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Txutxifel 2024-03-03 03:17:59 UTC
SUMMARY
***
Startup slow with Picture of the day (bing). I tried to find a clue in logs without successful.
***


STEPS TO REPRODUCE
1. Configure "picture of the day" in settings.
2. Reboot or close session.
3. Login
4 Slow startup process (40 seconds) -> Normally 10 seconds

OBSERVED RESULT
If you choose a simple Picture, startup process is 10 seconds. 
If you choose a simple Picture of the day, startup process is 40 seconds. 

EXPECTED RESULT
Same time

SOFTWARE/OS VERSIONS
Linux/KDE Plasma:  Opensuse Leap 15.5
KDE Plasma Version: 6.0 
KDE Frameworks Version:  6.0
Qt Version: 6.6

ADDITIONAL INFORMATION
Comment 1 Jonathan Villemaire-Krajden 2024-03-08 10:13:03 UTC
I have the same issue with the NASA picture of the day when it's not loaded yet (eg first boot in the morning). It takes a few seconds to startup during which it's stuck on the splash screen.
Comment 2 Bug Janitor Service 2024-03-09 16:42:06 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libplasma/-/merge_requests/1075
Comment 3 Fushan Wen 2024-03-10 03:01:54 UTC
Git commit 1b154b3eb2b7617067dfd05d961e53238458714e by Fushan Wen.
Committed on 10/03/2024 at 02:59.
Pushed by fusionfuture into branch 'master'.

ContainmentItem: set correct constraints when wallpaper is ready

Not all wallpaper plugins set their loading status to keep the splash
screen on, which means if the current wallpaper plugin is ready, there
is no isLoadingChanged signal, so the ui constraints will never be
updated. This adds a check to fix it.
FIXED-IN: 6.0.2

M  +14   -5    src/plasmaquick/plasmoid/containmentitem.cpp

https://invent.kde.org/plasma/libplasma/-/commit/1b154b3eb2b7617067dfd05d961e53238458714e
Comment 4 Fushan Wen 2024-03-10 03:04:47 UTC
Git commit ccd45f0434294b12ca342505f753dd1976d7260e by Fushan Wen.
Committed on 10/03/2024 at 03:02.
Pushed by fusionfuture into branch 'Plasma/6.0'.

ContainmentItem: set correct constraints when wallpaper is ready

Not all wallpaper plugins set their loading status to keep the splash
screen on, which means if the current wallpaper plugin is ready, there
is no isLoadingChanged signal, so the ui constraints will never be
updated. This adds a check to fix it.
FIXED-IN: 6.0.2


(cherry picked from commit 1b154b3eb2b7617067dfd05d961e53238458714e)

M  +14   -5    src/plasmaquick/plasmoid/containmentitem.cpp

https://invent.kde.org/plasma/libplasma/-/commit/ccd45f0434294b12ca342505f753dd1976d7260e
Comment 5 Bug Janitor Service 2024-03-10 16:33:09 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/2107
Comment 6 Fushan Wen 2024-03-11 01:42:02 UTC
Git commit e5b7ecb0cc8f2539e27720f2fb88262798bf9fa2 by Fushan Wen.
Committed on 11/03/2024 at 01:23.
Pushed by fusionfuture into branch 'master'.

appiumtests: add test to make sure ShellCorona gives ready signal to KSplash

M  +11   -1    appiumtests/desktop/CMakeLists.txt
A  +195  -0    appiumtests/desktop/bug482267.py

https://invent.kde.org/plasma/plasma-desktop/-/commit/e5b7ecb0cc8f2539e27720f2fb88262798bf9fa2
Comment 7 Bug Janitor Service 2024-03-11 01:42:55 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/2111
Comment 8 Fushan Wen 2024-03-11 01:48:11 UTC
Git commit 6ab0f22e76f3cd6af56988d63b6a8e51725b37b8 by Fushan Wen.
Committed on 11/03/2024 at 01:42.
Pushed by fusionfuture into branch 'Plasma/6.0'.

appiumtests: add test to make sure ShellCorona gives ready signal to KSplash


(cherry picked from commit e5b7ecb0cc8f2539e27720f2fb88262798bf9fa2)

M  +11   -1    appiumtests/desktop/CMakeLists.txt
A  +195  -0    appiumtests/desktop/bug482267.py

https://invent.kde.org/plasma/plasma-desktop/-/commit/6ab0f22e76f3cd6af56988d63b6a8e51725b37b8
Comment 9 Fushan Wen 2024-03-12 16:21:21 UTC
*** Bug 482082 has been marked as a duplicate of this bug. ***
Comment 10 Bug Janitor Service 2024-10-16 16:04:40 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4843
Comment 11 Fushan Wen 2024-10-17 00:20:00 UTC
Git commit bcc206be8288ba20265c03240e8fac8e5a62de13 by Fushan Wen.
Committed on 17/10/2024 at 00:00.
Pushed by fusionfuture into branch 'master'.

startkde: test setStage is called after starting plasma-ksplash-ready.service
Related: bug 494840

M  +1    -0    appiumtests/CMakeLists.txt
A  +14   -0    appiumtests/ksplash/CMakeLists.txt
A  +79   -0    appiumtests/ksplash/ksplashtest.py
M  +2    -0    lookandfeel/org.kde.breeze/contents/splash/Splash.qml

https://invent.kde.org/plasma/plasma-workspace/-/commit/bcc206be8288ba20265c03240e8fac8e5a62de13